product get query + update product
